[gd_scene load_steps=6 format=2]

[ext_resource path="res://Eunseo/Images/computer.png" type="Texture" id=1]
[ext_resource path="res://Eunseo/Scenes/Desk.gd" type="Script" id=2]
[ext_resource path="res://Eunseo/Images/light.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=91]
extents = Vector2( 27.625, 27.375 )

[sub_resource type="RectangleShape2D" id=92]
extents = Vector2( 28.125, 15.75 )

[node name="Desk_front" type="StaticBody2D"]
script = ExtResource( 2 )

[node name="light" type="Sprite" parent="."]
position = Vector2( 4, -9 )
scale = Vector2( 1.70281, 1.70281 )
texture = ExtResource( 3 )

[node name="Desk" type="Sprite" parent="."]
position = Vector2( 1, -5 )
scale = Vector2( 1.15625, 1.15625 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 1.375, -5.375 )
shape = SubResource( 91 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 2, 37.25 )
shape = SubResource( 92 )

[node name="Button" type="Button" parent="."]
visible = false
margin_left = -21.0
margin_top = -66.0
margin_right = 26.0
margin_bottom = -46.0
text = "Open"

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
